--- a/views/index.html
+++ b/views/index.html
@@ -7,6 +7,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="../public/style.css">
   </head>
   <body>
     <header>
@@ -36,35 +37,60 @@
       <h2><a href='/apitest/'>EXAMPLE: Go to <i>/apitest/</i> project issues</a></h2>
     </div>
     <hr style='margin: 50px'>
-    <div id='testui' style='margin-left: 5%'>
-      <h2 style="text-align: left">API Tests:</h2>
+    <h2 id="apitests" class="align_divs">API Tests:</h2><br><br>
+    <div id='testui' class="align_divs">
+
+
+      <div>
       <h3>Submit issue on <i>apitest</i></h3>
       <form id="testForm" class="border">
-        <input type="text" name="issue_title" placeholder="*Title" style="width: 100px" required=''><br>
-        <textarea type="text" name="issue_text" placeholder="*Text" style="width: 100px" required=''></textarea><br>
-        <input type="text" name="created_by" placeholder="*Created by" style="width: 100px" required=''><br>
-        <input type="text" name="assigned_to" placeholder="(opt)Assigned to" style="width: 100px"><br>
-        <input type="text" name="status_text" placeholder="(opt)Status text" style="width: 100px"><br>
+        <input type="text" name="issue_title" placeholder="*Title"  required=''><br>
+        <textarea type="text" name="issue_text" placeholder="*Text"  required=''></textarea><br>
+        <input type="text" name="created_by" placeholder="*Created by" s required=''><br>
+        <input type="text" name="assigned_to" placeholder="(opt)Assigned to" ><br>
+        <input type="text" name="status_text" placeholder="(opt)Status text" ><br>
         <button type="submit">Submit Issue</button>
       </form><br>
-      <h3>Update issue on <i>apitest</i> (Change any or all to update issue on the _id supplied)</h3>
+      </div>
+      <div>
+        <h3>Delete issue on <i>apitest</i></h3>
+        <form id="testForm3" class="border">
+          <input type="text" name="_id" placeholder="_id" required=''><br>
+          <button type="submit">Delete Issue</button>
+        </form>
+      </div>
+      <div>
+      <h3>Update issue on <i>apitest</i> </h3>
       <form id="testForm2" class="border">
-        <input type="text" name="_id" placeholder="*_id" style="width: 100px" required=''><br>
-        <input type="text" name="issue_title" placeholder="(opt)Title" style="width: 100px"><br>
-        <textarea type="text" name="issue_text" placeholder="(opt)Text" style="width: 100px"></textarea><br>
-        <input type="text" name="created_by" placeholder="(opt)Created by" style="width: 100px"><br>
-        <input type="text" name="assigned_to" placeholder="(opt)Assigned to" style="width: 100px"><br>
-        <input type="text" name="status_text" placeholder="(opt)Status text" style="width: 100px"><br>
+        <input type="text" name="_id" placeholder="*_id"  required=''><br>
+        <input type="text" name="issue_title" placeholder="(opt)Title" ><br>
+        <textarea type="text" name="issue_text" placeholder="(opt)Text" ></textarea><br>
+        <label><input type="checkbox" name="overwrite" value=false>check overwrites text / empty concatenates</label><br>
+        <input type="text" name="created_by" placeholder="(opt)Created by" ><br>
+        <input type="text" name="assigned_to" placeholder="(opt)Assigned to" ><br>
+        <input type="text" name="status_text" placeholder="(opt)Status text" ><br>
         <label><input type="checkbox" name="open" value=false> Check to close issue</label><br>
         <button type="submit">Submit Issue</button>
       </form><br>
-      <h3>Delete issue on <i>apitest</i></h3>
-      <form id="testForm3" class="border">
-        <input type="text" name="_id" placeholder="_id" style="width: 100px" required=''><br>
-        <button type="submit">Delete Issue</button>
-      </form>
-      <code id='jsonResult'></code>
+      </div>
+
+      <div>
+      <h3>Get issues  <i>apitest</i> </h3>
+      <form id="testForm4" class="border">
+        <input type="text" name="_id" placeholder="(opt)_id"  required=''><br>
+        <input type="text" name="issue_title" placeholder="(opt)Title" ><br>
+        <textarea type="text" name="issue_text" placeholder="(opt)Text" ></textarea><br>
+        <input type="text" name="created_by" placeholder="(opt)Created by" ><br>
+        <input type="text" name="assigned_to" placeholder="(opt)Assigned to" ><br>
+        <input type="text" name="status_text" placeholder="(opt)Status text" ><br>
+
+        <button type="submit">Submit Issue</button>
+      </form><br>
+      </div>
+
     </div>
+    <div id="jsonFrame"><code id='jsonResult' ></code></div>
+
     <hr style='margin: 50px; margin-top: 200px'>
     <!-- Your web-app is https, so your scripts need to be too -->
     <script src="https://code.jquery.com/jquery-2.2.1.min.js"
