--- a/views/index.html
+++ b/views/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Welcome to HyperDev!</title>
-    <meta name="description" content="A cool thing made with HyperDev">
-    <link id="favicon" rel="icon" href="https://hyperdev.com/favicon-app.ico" type="image/x-icon">
+    <title>Issue tracker</title>
+    <!--<meta name="description" content="A cool thing made with HyperDev">-->
+    <!--<link id="favicon" rel="icon" href="https://hyperdev.com/favicon-app.ico" type="image/x-icon">-->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,7 +15,6 @@
         ISQA_4 - Issue Tracker
       </h1>
     </header>
-    <div id='userstories' style='margin-left: 5%; margin-top: 5%'>
       <h3>User Stories</h3>
       <ol>
         <li>Prevent cross site scripting(XSS attack).</li>
@@ -35,6 +34,16 @@
       <code>[{"_id":"5871dda29faedc3491ff93bb","issue_title":"Fix error in posting data","issue_text":"When we post data it has an error.","created_on":"2017-01-08T06:35:14.240Z","updated_on":"2017-01-08T06:35:14.240Z","created_by":"Joe","assigned_to":"Joe","open":true,"status_text":"In QA"},...]</code>
       <br><br>
       <h2><a href='/apitest/'>EXAMPLE: Go to <i>/apitest/</i> project issues</a></h2>
+      Prevent cross site scripting(XSS attack).
+      I can POST /api/issues/{projectname} with form data containing required issue_title, issue_text, created_by, and optional assigned_to and status_text.
+      The object saved (and returned) will include all of those fields (blank for optional no input) and also include created_on(date/time), updated_on(date/time), open(boolean, true for open, false for closed), and _id.
+      I can PUT /api/issues/{projectname} with a _id and any fields in the object with a value to object said object. Returned will be 'successfully updated' or 'could not update '+_id. This should always update updated_on. If no fields are sent return 'no updated field sent'.
+      I can DELETE /api/issues/{projectname} with a _id to completely delete an issue. If no _id is sent return '_id error', success: 'deleted '+_id, failed: 'could not delete '+_id.
+      I can GET /api/issues/{projectname} for an array of all issues on that specific project with all the information for each issue as was returned when posted.
+      I can filter my get request by also passing along any field and value in the query(ie. /api/issues/{project}?open=false). I can pass along as many fields/values as I want.
+      All 11 functional tests are complete and passing.
+
+
     </div>
     <hr style='margin: 50px'>
     <h2 id="apitests" class="align_divs">API Tests:</h2><br><br>
@@ -46,7 +55,7 @@
       <form id="testForm" class="border">
         <input type="text" name="issue_title" placeholder="*Title"  required=''><br>
         <textarea type="text" name="issue_text" placeholder="*Text"  required=''></textarea><br>
-        <input type="text" name="created_by" placeholder="*Created by" s required=''><br>
+        <input type="text" name="created_by" placeholder="*Created by"  required=''><br>
         <input type="text" name="assigned_to" placeholder="(opt)Assigned to" ><br>
         <input type="text" name="status_text" placeholder="(opt)Status text" ><br>
         <button type="submit">Submit Issue</button>
@@ -55,7 +64,7 @@
       <div>
         <h3>Delete issue on <i>apitest</i></h3>
         <form id="testForm3" class="border">
-          <input type="text" name="_id" placeholder="_id" required=''><br>
+          <input type="text" name="_id" placeholder="_id" ><br>
           <button type="submit">Delete Issue</button>
         </form>
       </div>
@@ -75,24 +84,26 @@
       </div>
 
       <div>
-      <h3>Get issues  <i>apitest</i> </h3>
+      <h3>Get issues <i>apitest</i></h3>
       <form id="testForm4" class="border">
-        <input type="text" name="_id" placeholder="(opt)_id"  required=''><br>
+        <input type="text" name="_id" placeholder="(opt)_id"><br>
         <input type="text" name="issue_title" placeholder="(opt)Title" ><br>
         <textarea type="text" name="issue_text" placeholder="(opt)Text" ></textarea><br>
         <input type="text" name="created_by" placeholder="(opt)Created by" ><br>
         <input type="text" name="assigned_to" placeholder="(opt)Assigned to" ><br>
         <input type="text" name="status_text" placeholder="(opt)Status text" ><br>
-
+        <br>
+        <input id='openRadio' type="radio" name="status" value="o" checked>Open<br>
+        <input id='closedRadio' type="radio" name="status" value="c">Closed<br>
+        <input id='bothRadio' type="radio" name="status" value="b">Both<br>
         <button type="submit">Submit Issue</button>
       </form><br>
       </div>
-
     </div>
     <div id="jsonFrame"><code id='jsonResult' ></code></div>
 
-    <hr style='margin: 50px; margin-top: 200px'>
-    <!-- Your web-app is https, so your scripts need to be too -->
+
+     <!--Your web-app is https, so your scripts need to be too-->
     <script src="https://code.jquery.com/jquery-2.2.1.min.js"
             integrity="sha256-gvQgAFzTH6trSrAWoH1iPo9Xc96QxSZ3feW6kem+O00="
             crossorigin="anonymous"></script>
@@ -131,6 +142,17 @@
           });
           e.preventDefault();
         });
+          $('#testForm4').submit(function(e) {
+              $.ajax({
+                  url: '/api/issues/apitest',
+                  type: 'get',
+                  data: $('#testForm4').serialize(),
+                  success: function(data) {
+                      $('#jsonResult').text(JSON.stringify(data));
+                  }
+              });
+              e.preventDefault();
+          });
       });
    </script>
   </body>
