--- a/views/index.html
+++ b/views/index.html
@@ -9,7 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../public/style.css">
   </head>
-  <body>
+  <div>
+  <div class="main">
     <header>
       <h1>
         ISQA_4 - Issue Tracker
@@ -34,17 +35,20 @@
       <code>[{"_id":"5871dda29faedc3491ff93bb","issue_title":"Fix error in posting data","issue_text":"When we post data it has an error.","created_on":"2017-01-08T06:35:14.240Z","updated_on":"2017-01-08T06:35:14.240Z","created_by":"Joe","assigned_to":"Joe","open":true,"status_text":"In QA"},...]</code>
       <br><br>
       <h2><a href='/apitest/'>EXAMPLE: Go to <i>/apitest/</i> project issues</a></h2>
-      Prevent cross site scripting(XSS attack).
-      I can POST /api/issues/{projectname} with form data containing required issue_title, issue_text, created_by, and optional assigned_to and status_text.
-      The object saved (and returned) will include all of those fields (blank for optional no input) and also include created_on(date/time), updated_on(date/time), open(boolean, true for open, false for closed), and _id.
-      I can PUT /api/issues/{projectname} with a _id and any fields in the object with a value to object said object. Returned will be 'successfully updated' or 'could not update '+_id. This should always update updated_on. If no fields are sent return 'no updated field sent'.
-      I can DELETE /api/issues/{projectname} with a _id to completely delete an issue. If no _id is sent return '_id error', success: 'deleted '+_id, failed: 'could not delete '+_id.
-      I can GET /api/issues/{projectname} for an array of all issues on that specific project with all the information for each issue as was returned when posted.
-      I can filter my get request by also passing along any field and value in the query(ie. /api/issues/{project}?open=false). I can pass along as many fields/values as I want.
-      All 11 functional tests are complete and passing.
+    <ol>
+      <li>Prevent cross site scripting(XSS attack).</li>
+      <li>I can <b>POST</b> <code>/api/issues/{projectname}</code> with form data containing required <i>issue_title</i>, <i>issue_text</i>, <i>created_by</i>, and optional <i>assigned_to</i> and <i>status_text</i>.</li>
+      <li>The object saved (and returned) will include all of those fields (blank for optional no input) and also include <i>created_on</i>(date/time), <i>updated_on</i>(date/time), <i>open</i>(boolean, true for open, false for closed), and <i>_id</i>.</li>
+      <li>I can <b>PUT</b> <code>/api/issues/{projectname}</code> with a <i>_id</i> and any fields in the object with a value to object said object. Returned will be 'successfully updated' or 'could not update '+_id. This should always update <i>updated_on</i>. If no fields are sent return 'no updated field sent'.</li>
+      <li>I can <b>DELETE</b> <code>/api/issues/{projectname}</code> with a <i>_id</i> to completely delete an issue. If no _id is sent return '_id error', success: 'deleted '+_id, failed: 'could not delete '+_id.</li>
+      <li>I can <b>GET</b> <code>/api/issues/{projectname}</code> for an array of all issues on that specific project with all the information for each issue as was returned when posted.</li>
+      <li>I can filter my get request by also passing along any field and value in the query(ie. <code>/api/issues/{project}?open=false</code>). I can pass along as many fields/values as I want.</li>
+      <li>All 11 functional tests are complete and passing.</li>
+    </ol>
 
 
     </div>
+  </div>
     <hr style='margin: 50px'>
     <h2 id="apitests" class="align_divs">API Tests:</h2><br><br>
     <div id='testui' class="align_divs">
@@ -52,7 +56,7 @@
 
       <div>
       <h3>Submit issue on <i>apitest</i></h3>
-      <form id="testForm" class="border">
+      <form id="testForm" class="border" action="/api/issues/apitest" method="post">
         <input type="text" name="issue_title" placeholder="*Title"  required=''><br>
         <textarea type="text" name="issue_text" placeholder="*Text"  required=''></textarea><br>
         <input type="text" name="created_by" placeholder="*Created by"  required=''><br>
@@ -63,14 +67,14 @@
       </div>
       <div>
         <h3>Delete issue on <i>apitest</i></h3>
-        <form id="testForm3" class="border">
+        <form id="testForm3" class="border" action="/api/issues/apitest" method="delete">
           <input type="text" name="_id" placeholder="_id" ><br>
           <button type="submit">Delete Issue</button>
         </form>
       </div>
       <div>
       <h3>Update issue on <i>apitest</i> </h3>
-      <form id="testForm2" class="border">
+      <form id="testForm2" class="border" action="/api/issues/update" method="put">
         <input type="text" name="_id" placeholder="*_id"  required=''><br>
         <input type="text" name="issue_title" placeholder="(opt)Title" ><br>
         <textarea type="text" name="issue_text" placeholder="(opt)Text" ></textarea><br>
@@ -85,7 +89,7 @@
 
       <div>
       <h3>Get issues <i>apitest</i></h3>
-      <form id="testForm4" class="border">
+      <form id="testForm4" class="border" action="/api/issues/apitest" method="get">
         <input type="text" name="_id" placeholder="(opt)_id"><br>
         <input type="text" name="issue_title" placeholder="(opt)Title" ><br>
         <textarea type="text" name="issue_text" placeholder="(opt)Text" ></textarea><br>
@@ -96,7 +100,7 @@
         <input id='openRadio' type="radio" name="status" value="o" checked>Open<br>
         <input id='closedRadio' type="radio" name="status" value="c">Closed<br>
         <input id='bothRadio' type="radio" name="status" value="b">Both<br>
-        <button type="submit">Submit Issue</button>
+        <button type="submit" >Submit Issue</button>
       </form><br>
       </div>
     </div>
@@ -115,10 +119,12 @@
             type: 'post',
             data: $('#testForm').serialize(),
             success: function(data) {
-              $('#jsonResult').text(JSON.stringify(data));
+                $('#jsonResult').text(JSON.stringify(data));
+
             }
           });
           e.preventDefault();
+          document.getElementById('testForm').reset();
         });
         $('#testForm2').submit(function(e) {
           $.ajax({
@@ -126,7 +132,9 @@
             type: 'put',
             data: $('#testForm2').serialize(),
             success: function(data) {
-              $('#jsonResult').text(JSON.stringify(data));
+
+                $('#jsonResult').text(JSON.stringify(data));
+                document.getElementById('testForm2').reset();
             }
           });
           e.preventDefault();
@@ -138,6 +146,7 @@
             data: $('#testForm3').serialize(),
             success: function(data) {
               $('#jsonResult').text(JSON.stringify(data));
+                document.getElementById('testForm3').reset();
             }
           });
           e.preventDefault();
@@ -148,7 +157,9 @@
                   type: 'get',
                   data: $('#testForm4').serialize(),
                   success: function(data) {
-                      $('#jsonResult').text(JSON.stringify(data));
+
+                      document.getElementById('jsonResult').innerHTML=data;
+                      document.getElementById('testForm4').reset();
                   }
               });
               e.preventDefault();
