--- a/views/index.html
+++ b/views/index.html
@@ -8,6 +8,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../public/style.css">
+
+
   </head>
   <div>
   <div class="main">
@@ -32,19 +34,16 @@
       <code>/api/issues/{project}</code><br>
       <code>/api/issues/{project}?open=true&amp;assigned_to=Joe</code><br>
       <h3>Example return:</h3>
-      <code>[{"_id":"5871dda29faedc3491ff93bb","issue_title":"Fix error in posting data","issue_text":"When we post data it has an error.","created_on":"2017-01-08T06:35:14.240Z","updated_on":"2017-01-08T06:35:14.240Z","created_by":"Joe","assigned_to":"Joe","open":true,"status_text":"In QA"},...]</code>
+      <div id=""><p>{"_id":"5871dda29faedc3491ff93bb",
+        "issue_title":"Fix error in posting data",
+        "issue_text":"When we post data it has an error.",
+        "created_on":"2017-01-08T06:35:14.240Z",
+        "updated_on":"2017-01-08T06:35:14.240Z",
+        "created_by":"Joe","assigned_to":"Joe",
+        "open":true,
+        "status_text":"In QA"}</p></div>
       <br><br>
-      <h2><a href='/apitest/'>EXAMPLE: Go to <i>/apitest/</i> project issues</a></h2>
-    <ol>
-      <li>Prevent cross site scripting(XSS attack).</li>
-      <li>I can <b>POST</b> <code>/api/issues/{projectname}</code> with form data containing required <i>issue_title</i>, <i>issue_text</i>, <i>created_by</i>, and optional <i>assigned_to</i> and <i>status_text</i>.</li>
-      <li>The object saved (and returned) will include all of those fields (blank for optional no input) and also include <i>created_on</i>(date/time), <i>updated_on</i>(date/time), <i>open</i>(boolean, true for open, false for closed), and <i>_id</i>.</li>
-      <li>I can <b>PUT</b> <code>/api/issues/{projectname}</code> with a <i>_id</i> and any fields in the object with a value to object said object. Returned will be 'successfully updated' or 'could not update '+_id. This should always update <i>updated_on</i>. If no fields are sent return 'no updated field sent'.</li>
-      <li>I can <b>DELETE</b> <code>/api/issues/{projectname}</code> with a <i>_id</i> to completely delete an issue. If no _id is sent return '_id error', success: 'deleted '+_id, failed: 'could not delete '+_id.</li>
-      <li>I can <b>GET</b> <code>/api/issues/{projectname}</code> for an array of all issues on that specific project with all the information for each issue as was returned when posted.</li>
-      <li>I can filter my get request by also passing along any field and value in the query(ie. <code>/api/issues/{project}?open=false</code>). I can pass along as many fields/values as I want.</li>
-      <li>All 11 functional tests are complete and passing.</li>
-    </ol>
+
 
 
     </div>
@@ -57,13 +56,13 @@
       <div>
       <h3>Submit issue on <i>apitest</i></h3>
       <form id="testForm" class="border" action="/api/issues/apitest" method="post">
-        <input type="text" name="issue_title" placeholder="*Title"  required=''><br>
-        <textarea type="text" name="issue_text" placeholder="*Text"  required=''></textarea><br>
-        <input type="text" name="created_by" placeholder="*Created by"  required=''><br>
-        <input type="text" name="assigned_to" placeholder="(opt)Assigned to" ><br>
-        <input type="text" name="status_text" placeholder="(opt)Status text" ><br>
+        <input type="text" name="issue_title" placeholder="*Title"  ><br>
+        <textarea type="text" name="issue_text" placeholder="*Text"  ></textarea><br>
+        <input type="text" name="created_by" placeholder="*Created by"  ><br>
+        <input type="text" name="assigned_to" placeholder="(optional)Assigned to" ><br>
+        <input type="text" name="status_text" placeholder="(optional)Status text" ><br>
         <button type="submit">Submit Issue</button>
-      </form><br>
+      </form>
       </div>
       <div>
         <h3>Delete issue on <i>apitest</i></h3>
@@ -75,96 +74,92 @@
       <div>
       <h3>Update issue on <i>apitest</i> </h3>
       <form id="testForm2" class="border" action="/api/issues/update" method="put">
-        <input type="text" name="_id" placeholder="*_id"  required=''><br>
-        <input type="text" name="issue_title" placeholder="(opt)Title" ><br>
-        <textarea type="text" name="issue_text" placeholder="(opt)Text" ></textarea><br>
-        <label><input type="checkbox" name="overwrite" value=false>check overwrites text / empty concatenates</label><br>
-        <input type="text" name="created_by" placeholder="(opt)Created by" ><br>
-        <input type="text" name="assigned_to" placeholder="(opt)Assigned to" ><br>
-        <input type="text" name="status_text" placeholder="(opt)Status text" ><br>
+        <input type="text" name="_id" placeholder="*_id"  ><br>
+        <input type="text" name="issue_title" placeholder="(optional)Title" ><br>
+        <textarea type="text" name="issue_text" placeholder="(optional)Text" ></textarea><br>
+        <input type="text" name="created_by" placeholder="(optional)Created by" ><br>
+        <input type="text" name="assigned_to" placeholder="(optional)Assigned to" ><br>
+        <input type="text" name="status_text" placeholder="(optional)Status text" ><br>
         <label><input type="checkbox" name="open" value=false> Check to close issue</label><br>
         <button type="submit">Submit Issue</button>
-      </form><br>
+      </form>
       </div>
 
       <div>
       <h3>Get issues <i>apitest</i></h3>
       <form id="testForm4" class="border" action="/api/issues/apitest" method="get">
-        <input type="text" name="_id" placeholder="(opt)_id"><br>
-        <input type="text" name="issue_title" placeholder="(opt)Title" ><br>
-        <textarea type="text" name="issue_text" placeholder="(opt)Text" ></textarea><br>
-        <input type="text" name="created_by" placeholder="(opt)Created by" ><br>
-        <input type="text" name="assigned_to" placeholder="(opt)Assigned to" ><br>
-        <input type="text" name="status_text" placeholder="(opt)Status text" ><br>
+        <input type="text" name="_id" placeholder="(optional)_id"><br>
+        <input type="text" name="issue_title" placeholder="(optional)Title" ><br>
+        <textarea type="text" name="issue_text" placeholder="(optional)Text" ></textarea><br>
+        <input type="text" name="created_by" placeholder="(optional)Created by" ><br>
+        <input type="text" name="assigned_to" placeholder="(optional)Assigned to" ><br>
+        <input type="text" name="status_text" placeholder="(optional)Status text" ><br>
         <br>
         <input id='openRadio' type="radio" name="status" value="o" checked>Open<br>
         <input id='closedRadio' type="radio" name="status" value="c">Closed<br>
         <input id='bothRadio' type="radio" name="status" value="b">Both<br>
         <button type="submit" >Submit Issue</button>
-      </form><br>
+      </form>
       </div>
-    </div>
+    </div><br><br>
     <div id="jsonFrame"><code id='jsonResult' ></code></div>
 
 
-     <!--Your web-app is https, so your scripts need to be too-->
-    <script src="https://code.jquery.com/jquery-2.2.1.min.js"
-            integrity="sha256-gvQgAFzTH6trSrAWoH1iPo9Xc96QxSZ3feW6kem+O00="
-            crossorigin="anonymous"></script>
-    <script>
+  <script src="https://code.jquery.com/jquery-2.2.1.min.js"
+  integrity="sha256-gvQgAFzTH6trSrAWoH1iPo9Xc96QxSZ3feW6kem+O00="
+  crossorigin="anonymous"></script>
+
+  <script>
       $(function() {
-        $('#testForm').submit(function(e) {
-          $.ajax({
-            url: '/api/issues/apitest',
-            type: 'post',
-            data: $('#testForm').serialize(),
-            success: function(data) {
-                $('#jsonResult').text(JSON.stringify(data));
+          $('#testForm').submit(function (e) {
+              $.ajax({
+                  url: '/api/issues/apitest',
+                  type: 'post',
+                  data: $('#testForm').serialize(),
+                  success: function (data) {
+                      document.getElementById('jsonResult').innerHTML = data;
+                  }
+              });
+              e.preventDefault();
+              document.getElementById('testForm').reset();
+          });
+          $('#testForm2').submit(function (e) {
+              $.ajax({
+                  url: '/api/issues/apitest',
+                  type: 'put',
+                  data: $('#testForm2').serialize(),
+                  success: function (data) {
+                      document.getElementById('jsonResult').innerHTML = data;
+                  }
+              });
+              e.preventDefault();
+              document.getElementById('testForm2').reset();
+          });
+          $('#testForm3').submit(function (e) {
+              $.ajax({
+                  url: '/api/issues/apitest',
+                  type: 'delete',
+                  data: $('#testForm3').serialize(),
+                  success: function (data) {
+                      document.getElementById('jsonResult').innerHTML = data;
+                  }
+              });
+              e.preventDefault();
 
-            }
           });
-          e.preventDefault();
-          document.getElementById('testForm').reset();
-        });
-        $('#testForm2').submit(function(e) {
-          $.ajax({
-            url: '/api/issues/apitest',
-            type: 'put',
-            data: $('#testForm2').serialize(),
-            success: function(data) {
-
-                $('#jsonResult').text(JSON.stringify(data));
-                document.getElementById('testForm2').reset();
-            }
-          });
-          e.preventDefault();
-        });
-        $('#testForm3').submit(function(e) {
-          $.ajax({
-            url: '/api/issues/apitest',
-            type: 'delete',
-            data: $('#testForm3').serialize(),
-            success: function(data) {
-              $('#jsonResult').text(JSON.stringify(data));
-                document.getElementById('testForm3').reset();
-            }
-          });
-          e.preventDefault();
-        });
-          $('#testForm4').submit(function(e) {
+          $('#testForm4').submit(function (e) {
               $.ajax({
                   url: '/api/issues/apitest',
                   type: 'get',
                   data: $('#testForm4').serialize(),
-                  success: function(data) {
-
-                      document.getElementById('jsonResult').innerHTML=data;
-                      document.getElementById('testForm4').reset();
+                  success: function (data) {
+                      document.getElementById('jsonResult').innerHTML = data;
                   }
               });
               e.preventDefault();
+              document.getElementById('testForm4').reset();
           });
       });
-   </script>
+  </script>
   </body>
 </html>
