changes after testing UI

--- a/views/index.html
+++ b/views/index.html
@@ -87,6 +87,7 @@
 
       <div>
       <h3>Get issues <i>apitest</i></h3>
+        <!--<h4>You shouldn't use more than 1 criteria all at once!</h4>-->
       <form id="testForm4" class="border" action="/api/issues/apitest" method="get">
         <input type="text" name="_id" placeholder="(optional)_id"><br>
         <input type="text" name="issue_title" placeholder="(optional)Title" ><br>
